form-checkbox group

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 html {
-    font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* 1 */
     line-height: 1.5;
+    @apply font-sans
 }
 body {
     @apply bg-gray-100
