--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,11 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import 'font.css';
 
 html {
     line-height: 1.5;
-    @apply font-sans
 }
+.font-family-karla { font-family: karla; }
 body {
-    @apply bg-gray-100
+    @apply bg-gray-100 font-family-karla
 }
